Parse and preserve new `details` attribute
Closes https://github.com/PeterBowman/wikibot/issues/5.